display fabric tiles instead of just IDs for the available fabrics list, fixed a bug with clipPaths since there are now essentially two quilts on the page and the ids intersected

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,14 +24,11 @@
 
 /**** end create-react-app stuff ****/
 
-
 /**** layout ****/
 
-
-
-
 /**** SVG stuff ****/
-.svg-quilt {
+.svg-quilt,
+.available-fabrics {
   position: relative;
+  overflow: hidden;
 }
-
